src/objects/Contact_Event__c.object
<CustomObject>
    <description>For recording each time that contact is made with a client of any type</description>
    <fields>
        <fullName>Actions_taken__c</fullName>
        <label>Actions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Events</relationshipLabel>
        <relationshipName>Contact_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Date_Time__c</fullName>
        <label>Contact Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration (mins)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Referred to</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First appointment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ongoing support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access to services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access to information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Follow_up_action_required__c</fullName>
        <label>Follow up action required</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Format__c</fullName>
        <label>Format</label>
        <picklist>
            <picklistValues>
                <fullName>Phone call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting at office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting at client&apos;s home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting elsewhere</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_of_attendees__c</fullName>
        <label>No. of people involved</label>
        <summaryForeignKey>Contact_Event_Contact_Connector__c.Contact_Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Other_Signposting_Info__c</fullName>
        <label>Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signposting_information_given__c</fullName>
        <description>Categories of signposting information given at this contact event</description>
        <label>Information Tool</label>
        <picklist>
            <picklistValues>
                <fullName>Diagnosis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Driving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emotions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal decisions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Living well</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Money</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The future</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (please describe below)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned to</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contact_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contact Interaction</label>
    <listViews>
        <fullName>All_Contact_interactions</fullName>
        <columns>NAME</columns>
        <columns>No_of_attendees__c</columns>
        <columns>Contact_Date_Time__c</columns>
        <columns>Follow_up_action_required__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Format__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contact Interactions</label>
    </listViews>
    <listViews>
        <fullName>My_Contact_Interactions</fullName>
        <columns>Client__c</columns>
        <columns>NAME</columns>
        <columns>Contact_Date_Time__c</columns>
        <columns>Follow_up_action_required__c</columns>
        <columns>Event_Type__c</columns>
        <columns>Format__c</columns>
        <columns>Duration__c</columns>
        <columns>No_of_attendees__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Contact Interactions</label>
    </listViews>
    <nameField>
        <label>Contact Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Interactions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>